@@ -1,3 +1,5 @@
+* Allow column sql types to be retrieved from the table handler
+
 Version 5.6.3 - 2020-07-01
 * Bug fixes (see mercurial logs for details)
 
